--- a/api/package.json
+++ b/api/package.json
@@ -6,19 +6,21 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "bluebird": "^3.5.4",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "ejs": "~2.5.7",
-    "express": "~4.16.0",
-    "http-errors": "~1.6.2",
+    "cookie-parser": "~1.4.4",
+    "debug": "~4.1.1",
+    "ejs": "~2.6.1",
+    "express": "~4.16.4",
+    "http-errors": "~1.7.2",
     "joi": "^14.3.1",
-    "mongoose": "^5.5.0",
-    "morgan": "~1.9.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.5.2",
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
     "dotenv": "^7.0.0",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.11"
   }
 }
