--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
-    "http-errors": "~1.6.2",
+    "http-errors": "^1.6.3",
     "joi": "^14.3.1",
     "mongoose": "^5.5.0",
     "morgan": "~1.9.0"
