--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "bluebird": "^3.5.4",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -13,8 +14,10 @@
     "express": "~4.16.0",
     "http-errors": "^1.6.3",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "node-pre-gyp": "^0.12.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
